--- a/src/main/resources/nyc/codyboppert/calculatorServer/views/calculator.mustache
+++ b/src/main/resources/nyc/codyboppert/calculatorServer/views/calculator.mustache
@@ -5,7 +5,7 @@
     </head>
 
     <body>
-        <form id="calculator-form" action="GET">
+        <form id="calculator-form" action="/" method="get">
             <h1>Simple Calculator</h1>
             ((<input name="a" type="number" min="{{ floatMin }}" max="{{ floatMax }}" value="{{ a }}"> +
             <input name="b" type="number" min="{{ floatMin }}" max="{{ floatMax }}" value="{{ b }}">) *
